--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,22 +16,22 @@
           <th colspan="3"></th>
         </tr>
       </thead>
-      
+
         <% @books.each do |book| %>
       <tbody>
         <tr>
             <td><%= book.title %></td>
             <td><%= book.body %></td>
             <td>
-              <a class="" href="">Show</a>
+              <%= link_to "Show", book_path(book.id) %>
             </td>
             <td>
-              <a class="" href="">Edit</a>
+              <%= link_to "Edit", edit_book_path(book.id)  %>
             </td>
             <td>
-              <a class="" href="">Destroy</a>
+              <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %>
             </td>
-            <% end %>
+          <% end %>
         </tr>
 
       </tbody>
