--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,16 @@
+<% if flash[:notice] %>
+　　<div class="flash">
+        <%= flash[:notice] %>
+    </div>
+<% end %>
+
 <h1>Editing Book</h1>
+
+<% @book.errors.full_messages.each do |message| %>
+  <div class="form-error">
+    <%= message %>
+  </div>
+<% end %>
 
 <%= form_with model: @book, url:book_path(@book.id), method: :patch do |f| %>
 
