--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -37,8 +37,15 @@
       </tbody>
     </table>
 
+     <% @book.errors.full_messages.each do |message| %>
+        <div class="form-error">
+      <%= message %>
+        </div>
+      <% end %>
+
+
     <h2>New Book</h2>
-      <%= form_with model:@book, url: '/books', method: :post do |f| %>
+      <%= form_with model:@book, url: books_path(), method: :post do |f| %>
     <h4>Title</h4>
       <%= f.text_field :title %>
 
@@ -47,6 +54,7 @@
 
       <%= f.submit 'create Book' %>
       <% end %>
+
 
   </body>
  </html>
