--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,9 @@
+ <% if flash[:notice] %>
+　　<div class="flash">
+        <%= flash[:notice] %>
+    </div>
+ <% end %>
+
 <h2>Title:</h2>
 <p><%= @book.title %></p>
 
@@ -7,3 +13,4 @@
 <%= link_to "Edit", edit_book_path(@book.id) %>
 <p>|</p>
 <%= link_to "Back", books_path() %>
+
