--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -37,14 +37,20 @@
       </tbody>
     </table>
 
-     <% @book.errors.full_messages.each do |message| %>
-        <div class="form-error">
-      <%= message %>
-        </div>
-      <% end %>
-
-
     <h2>New Book</h2>
+    
+    <% if @book.errors.any? %>
+      <%= @book.errors.count %>error
+
+    <% @book.errors.full_messages.each do |message| %>
+    <div class="form-error">
+      <%= message %>
+    </div>
+    <% end %>
+    <% end %>
+    
+    
+      
       <%= form_with model:@book, url: books_path(), method: :post do |f| %>
     <h4>Title</h4>
       <%= f.text_field :title %>
@@ -52,7 +58,7 @@
     <h4>Body</h4>
       <%= f.text_area :body %>
 
-      <%= f.submit 'create Book' %>
+      <%= f.submit 'Create Book' %>
       <% end %>
 
 
